k8s/cantus-ultimus/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cantus-ultimus
spec:
  selector:
    app: nginx
  ports:
  - port: 8000
    targetPort: 8000
