k8s/cantus-ultimus/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cantus-ingress
  namespace: cantus-ultimus
spec:
  rules:
  - host: cantus.simssa.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 8000
